tests/invalid/UnknownReference_Invalid_5.whiley
method main():
    &(int[]) p = new [1,2,3]
    //
    *p = [4,5,6]